# janus-updater-service

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: publish.yml
janus/: config.py  discovery.py  docker_client.py  logging_setup.py  main.py  recreate.py  scheduler.py  updater.py
tests/: test_config.py  test_discovery.py  test_scheduler.py
